# latent-rl

./: .gitignore  LICENSE  README.md  pyproject.toml
dashboard/: __init__.py  app.py
dashboard/assets/: dashboard.css
dashboard/components/: __init__.py  cards.py  figures.py
dashboard/data/: __init__.py  loader.py
docs/: BASELINES.md  DATA_PIPELINE_GUIDE.md  DQN_AGENT.md  ENCODER_UPGRADE.md  FINANCIAL_ENV.md  OFFLINE_PRETRAINING.md  PLAN_TFM_BORRADOR.md  RUN_ABCD_ROBUST_H64.md  TRAINING_EVAL_PROTOCOL.md
examples/: baseline_comparison.py  basic_example.py  compare_agents_experiment.py  compare_agents_multiseed_experiment.py  download_yfinance.py  dqn_training_example.py  latent_advantage_example.py  latent_dqn_training_example.py  latent_dqn_with_pretrained_example.py  pretrain_encoder_example.py  pretrain_offline_encoder.py  random_agent_example.py  uc1_load_data_with_features.py  uc2_is_oos_normalization.py  uc3_walk_forward.py  uc4_context_tickers.py  uc5_full_data_pipeline.py
models/encoders/: tcn_heavy.pt
scripts/: README.md  __init__.py  export_memory_figures.py
tests/: __init__.py  conftest.py  test_abcd_robust_script.py  test_agents.py  test_autoencoder_trainer.py  test_dashboard_enhancements.py  test_data.py  test_dqn_agent.py  test_dqn_enhancements.py  test_encoder_pretrainer.py  test_envs.py  test_evaluation.py  test_experiments.py  test_latent_advantage.py  test_latent_dqn_agent.py  test_offline_pretrain.py  test_precompute_latents.py  test_reporting.py  test_representations.py  test_script_entrypoints.py  test_walkforward.py
(+73 files in other folders)
