[project]
name = "latent-rl"
version = "0.1.0"
description = "Plataforma experimental para RL financiero con representaciones latentes"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Carlos Cañas García-Moreno"},
    {name = "Lucas Fuentes Galán"},
    {name = "Manuel Díaz Bermúdez"},
]

dependencies = [
    "torch>=2.0.0",
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "matplotlib>=3.8.0",
    "dash>=2.14.0",
    "plotly>=5.18.0",
    "gymnasium>=0.29.0",
    "yfinance>=0.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
]

[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
markers = [
    "integration: pruebas de integración de extremo a extremo y de componentes",
]
